@@ -200,6 +200,6 @@ div.fc-thumbnails {
    height : 200px;
    text-align : center;
    overflow : auto;
-   border : 1px solid black;
+   border : 1px solid #999;
 }
 
