@@ -1,3 +1,10 @@
+28 January 2008
++ getFile has second parameter to forgo style from file cabinet
++ Increase document upload size.
++ Fixed file assoc's image resize code.
++ Fixed button vs link in file cabinet's admin screens
++ Lightened border on image thumbs
+
 25 January 2008
 + Restructured file_assoc - no longer uses tag variable
  ( Resize is broken now, will fix next commit. )
